// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Text props 1`] = `
Object {
  "colorMode": "default",
  "elementRef": [Function],
  "ref": [Function],
  "style": Array [
    Object {
      "fontSize": 200,
    },
    Object {},
  ],
}
`;

exports[`composition render props should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 16px;"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(87, 79, 235); font-size: 16px;"
>
  hello world
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 16px;"
>
  Hello world
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(87, 79, 235); font-size: 16px;"
>
  Hello world
</div>
`;

exports[`theming Text.styles.base should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-size: 16px;"
>
  hello world
</div>
`;

exports[`theming Text.styles.base should render correctly with default font 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-family: default; font-size: 16px;"
>
  hello world
</div>
`;

exports[`theming Text.styles.base should render correctly with heading font 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-family: heading; font-size: 16px;"
>
  hello world
</div>
`;
